# curriculum-generator-backend

./: requirements.txt
curriculum_generator/: README.md  pyproject.toml
curriculum_generator/src/curriculum_generator/: crew.py  main.py
