[project]
name = "curriculum_generator"
version = "0.1.0"
description = "curriculum-generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
curriculum_generator = "curriculum_generator.main:run"
run_crew = "curriculum_generator.main:run"
train = "curriculum_generator.main:train"
replay = "curriculum_generator.main:replay"
test = "curriculum_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
